--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -161,7 +161,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. Foliage density mediates light regime, where denser upper canopies exposed to greater PAR values limit light to canopy interiors, lower canopy layers, and the understory. 
 This light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b].
 
-The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]and needle-leaf forest floors receive 17-34% of incoming sunlight [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute to the light environment of shaded forest regions, in the form of sunflecks. Shaded canopy layers rely on sunflecks for photosynthesis. In some cases, they receive 10-80% of their photon flux density or 1/3 of their carbon gain from short light bursts within minutes of exposure [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995).
+The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]and needle-leaf forest floors receive 17-34% of incoming sunlight [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute light in the form sunflecks--around 10-80% of of photon flux density-- to shaded forest regions that receive 1/3 of their carbon  during photosynthesis through these short light exposures [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995).
 
 These light regimes shape foliage at a vertical gradient, which in turn shapes the microenvironment. At a foliar level, resulting light-adaptation in the form of sun and shade leaf dichotomy also facilitates plant-adaptation to the light environment in the understory and the overstory, ultimately contributing to shaping the microenvironment, forest vertical-profile's thermal sensitivity and their response to warming  [@fauset_differences_2018; @millerOnlySunlitLeaves2021; @michaletzPlantThermoregulationEnergetics2015; *De Frenne et al. 2021*] 
 
@@ -174,11 +174,11 @@ Consistent with these results from NEON sites, higher wind speeds at greater hei
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, such as needle-leaf forests, have lower buffering capacity, greater vertical air mixing and greater light permeability through canopy layers. They maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999]. During the night, these pine forests have been observed to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
+The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, such as needle-leaf forests, have lower buffering capacity, greater vertical air mixing and greater light permeability through canopy layers. For this reason, they maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999]. During the night, these pine forests have been observed to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
 
 Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and higher relative humidity below canopies and understories than above forest canopies and gaps. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
-Under colder conditions (?), minimum $T_{air}$ [$T_{min}$] is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019; Defrenne et al. 2021] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower $T_{min}$. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
+Under colder conditions, minimum $T_{air}$ [$T_{min}$] is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019; Defrenne et al. 2021] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower $T_{min}$. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
 
 Thus, we see that buffering by canopy cover smooths the affect temperature extremes and fluctuation in the understory [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020; @rollinsonClimateSensitivityUnderstory; Defrenne et al. 2021],though, as a result of global rise in temperatures, inevitable increases in understory temperatures continue to be observed [@bertrandCommentForestMicroclimate2020].
 
@@ -200,7 +200,7 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In European forests, buffering capacity was stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a]. In a few European high altitude forests, trees are sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] and have open canopies with greater light interception through canopy layers, and to the understory [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Less capacity to buffer climatic conditions in open, high altitude forests might have implications to forest regeneration and climate change [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018]. This is also observed in  timberline and temperate humid-mountain forests in China, where tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) increased [@liangForestTypeHeight2019]. Whereas, increase in tree height in closed-forests, typically increases buffering in the understory [@juckerCanopyStructureTopography2018].
+With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In Switzerland forests, buffering capacity was stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a], partly because trees here were sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] and in other high-altitude forests, trees have open canopies with greater light interception through canopy layers [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Less capacity to buffer climatic conditions in open, high altitude forests might have implications to forest regeneration and climate change [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018]. This is also observed in  timberline and temperate humid-mountain forests in China, where tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) increased [@liangForestTypeHeight2019]. Whereas in closed-forests, increase in tree height, typically increases buffering in the understory [@juckerCanopyStructureTopography2018].
 
 The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Riparian forests tend to sustain buffering, protecting understory temperatures even during increasing temperature extremes compared to open areas by a stream [@davis_microclimatic_2019; @macekMaximumAirTemperature2019]
 
@@ -209,7 +209,7 @@ The strength of buffering also varies with respect to distance to the coast, top
 ### Biophysical drivers
 
 **Many of the vertical gradient biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
-Leaves (try to) maintain metabolic optima in order to maximize carbon assimilation, in a given circumstance, through the adaptation of their leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020].Thus, $T_{leaf}$ and leaf thermoregulation, is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
+Leaves maximize carbon assimilation by maintaining metabolic optima, in a given circumstance, through the adaptation of their leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020].Thus, $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
@@ -222,7 +222,7 @@ In low wind conditions, because $g_{a}$ to heat transfer is comparatively small,
 Additionally, the thickness of the air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata. This tends to be greater in the understory than in the canopy [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
-Leaf thermoregulation is also a tradeoff between water use strategy and optimum leaf temperature, which is influenced by stomtal conductance and leaf water content [@fauset_differences_2018; *Koch et al. 1994*]. Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
+Leaf thermoregulation is also a tradeoff between water use strategy and optimum leaf temperature, which is influenced by stomtal conductance that facilitates heat dissapation and leaf water content that affects the rate of leaf warming [@fauset_differences_2018; *Koch et al. 1994*]. Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
 Under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance.  However, in circumstances such as during the midday, $T_{leaf}$ can become highly elevated above $T_{air}$ when $g_{s}$ or $g_{a}$ is low. This is caused by increase in air temperature and VPD, which limits stomatal conductance along with decreased leaf water content and leaf CO~2~ [*Koch et al. 1994*; @fauset_differences_2018]. On the other, shaded understory leaves under closed canopies should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. 
 
 **In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** 
@@ -242,17 +242,18 @@ Particularly, in open forests with sparse distribution of trees, such as in some
 At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
-In closed-canopy forests with increased buffering capacity, large leaf to air temperature differences and high leaf temperatures are found in the upper canopies of tropical forests such as in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest during the wet season in Panama [@rey-sanchez_spatial_2016], and in a temperate forest [@mauTemperateTropicalForest2018a].   
-- In three forest types-- temperate, tropical wet and tropical moist, $T_{leaf max}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in upper canopies of all sites, however $T_{leaf max}$ exceeded $T_{opt}$ at different heights and temperatures in all forests; with no significant relationship between $T_{opt}$ and height. Additionally, with increasing height, $T_{leaf} - T_{air}$ difference increased in the upper canopies of all forests, exhibiting greatest $T_{leaf} - T_{air}$ in temperate deciduous forest compared to tropical moist and wet.
+Especially in closed-canopy forests with increased buffering capacity, large leaf to air temperature differences and high leaf temperatures are found in the upper canopies compared to lower canopies of tropical forests, that are substanially buffered such as in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest during the wet season in Panama [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a].   
+
+In three forest types-- temperate, tropical wet and tropical moist, $T_{leaf max}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in upper canopies of all sites with $T_{leaf max}$ exceeding $T_{opt}$ at different canopy heights and temperatures in all forests, with no significant relationship between $T_{opt}$ and height. Additionally, with increasing height, $T_{leaf} - T_{air}$ difference increased in the upper canopies of all forests, exhibiting greatest $T_{leaf} - T_{air}$ in temperate deciduous forest compared to tropical moist and wet.
 - In a tropical wet and moist forests of Puerto Rico and temperate forests in Michigan, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures, sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a] 
 -"Sun exposed outer canopy leaves in tropical trees can experience temperatures up 48 C during diurnal cycle, midday stomtal closure reduces transpitrational cooling" thus elevating leaf temperature greater than air temperature (Slot et al. 2019)
 
 
 ## Leaf traits 
 
-**Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light, in order to optimize C uptake, water use, thermoregulation and metabolism across forest vertical strata, and thus show different degrees foliar plasticity [michaletzPlantThermoregulationEnergetics2015; *REFs*]**
+**Leaf thermoregulation largely depends on leaf traits. Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light, in order to optimize C uptake, water uptake, thermoregulate and balance metabolism, across forest vertical strata, and thus show different degrees foliar plasticity [michaletzPlantThermoregulationEnergetics2015; *REFs*]**
 
-Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).
+Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). 
 Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism and carbon balance (following section).
 It is unsuprising, then, that leaf traits vary dramatically across vertical gradients.
 
@@ -281,6 +282,8 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 ### Intraspecific variation
 
 Leaf traits in woody species take approximately 30-60 days to stabilize to integrated light after formation [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. As a result, degrees of high to low irradiance gives rise to a dichotomy of sun and shade leaf traits. Typical sun leaves are often smaller in size and width, thicker, and hairier, with thicker cuticle and greater lobation than shade leaves [Rozendaal et al. 2006, Mathur et al. 2018, *REFS*]. Within-species, several studies point towards these common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient based on adaptation to primarily light conditions, and as well biophysical gradient [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
+
+However, even with distinct features of sun and shade traits, trait adaptation to light maximizes light use efficiency for photosynthesis at both high and low light, while also adapting to other stressors as mentioned above. In light limited conditions, shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis, which "leads to a similar chlorophyll content on an area basis compared with sun leaves. This enables shade leaves to realize similar light capture to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000, @rozendaalPlasticityLeafTraits2006]
 
 An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient (???), because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and with height and ontogeny (Niinemets et al., 2015; Ishii et al., 2018) as well as geographically (Ishii et al., 2018).
 
@@ -337,14 +340,8 @@ High light stimulates the need for photoprotection in leaves in order to protect
 
 - Elsa: see also H. Poorter, U. Niinemets, L. Poorter, I. J. Wright, R. Villar, Causes and consequences of variation in leaf mass per area (LMA): A meta-analysis. New Phytol. 182, 565–588 (2009). -- LMA responds to changes in light, with shade-intolerant species displaying higher plasticity in response to light.
 
-
-
-
  "Additionally, shorter understory trees that spend the bulk of their lifecycle in the shade experience different pressures than plant that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well" -Martijn 
 
-The combination of stressors experienced by taller trees' foliage are different from that experienced by understory trees. For example, overstory sun leaves experience greater loads of PAR, $VPD$, elevated temperatures, higher wind speed, etc.. whereas understory leaves are subjected to shade or limitation of light, niche competition and herbivory. Overstory sun leaves are subjected to overheating pressures; thus, through developed traits of increased stomatal density, transpiration and water supply, along with increased convective heat loss via reduced boundary layer resistance, sun leaves are able to maintain optimum temperatures for photosynthesis and metabolic processes. Additionally, overstory sun leaves tend to have long-lived leaves[*double check*] with high LMA while shade leaves of canopy trees have large leaves with low LMA. Adaptive traits in understory enable light capture efficiency while maintaining larger width leaves with comparatively lower stomatal density due to low levels of photosynthesis in the shade, lesser $VPD$, and wind speed. Those differences in traits are likely to affect their thermal properties as well. Leaves act as windows to plant performance, enhancing plant adaptation to changing environment, thus leaf traits acclimated to prior stressors have been suggested to enable whole plants to respond differently to forthcoming stress [@rozendaalPlasticityLeafTraits2006; @niinemetsResponsesForestTrees2010a]
-
-However, even with distinct features of sun and shade traits, trait adaptation to light maximizes light use efficiency for photosynthesis at both high and low light, while also adapting to other stressors as mentioned above. In light limited conditions, shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis, which "leads to a similar chlorophyll content on an area basis compared with sun leaves. This enables shade leaves to realize similar light capture to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000, @rozendaalPlasticityLeafTraits2006]
 
 With increasing height and age, competition for light decreases as availability  of light increases in dense forests. However, depending on growth strategies of species occupying the understory, leaf traits might differ due to species inherent light requirements. Early successional species are considered more shade intolerant than late successional species that are more shade tolerant. Ontogenetic differences between the two in the understory suggests lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities in shade tolerators than in intolerators [@niinemetsControversyTraitsConferring2006]. However, the findings from the above review conflicts with  Kitajima 1994 found for tropical seedlings; shade intolerance species grew faster in the sun AND in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is a consensus by now.
 
